@@ -1,13 +1,13 @@
 package shop.bluebooktle.frontend.controller.admin;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
@@ -18,6 +18,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
+import shop.bluebooktle.common.domain.point.PolicyType;
+import shop.bluebooktle.common.dto.point.request.PointPolicyCreateRequest;
+import shop.bluebooktle.common.dto.point.request.PointPolicyUpdateRequest;
+import shop.bluebooktle.common.dto.point.request.PointPolicyWithSourceCreateRequest;
+import shop.bluebooktle.common.dto.point.request.PointSourceTypeCreateRequest;
+import shop.bluebooktle.common.dto.point.response.PointRuleResponse;
+import shop.bluebooktle.frontend.service.PointService;
 
 @Slf4j
 @Controller
@@ -25,60 +32,7 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 public class AdminPointPolicyController {
 
-	// private final AdminPointPolicyService adminPointPolicyService; // 실제 서비스 주입
-
-	// --- DTO 정의 ---
-	@Getter
-	@Setter
-	@ToString
-	static class PointEarningRuleDto {
-		private String sourceTypeKey; // 예: "SIGN_UP", "REVIEW_WRITE", "BOOK_PURCHASE"
-		private String sourceTypeName; // 예: "회원가입 시", "리뷰 작성 시"
-		private String earningType = "AMOUNT"; // "AMOUNT", "PERCENTAGE"
-		private Double earningValue = 0.0;
-		private boolean isActive = true;
-
-		public PointEarningRuleDto() {
-		}
-
-		public PointEarningRuleDto(String sourceTypeKey, String sourceTypeName, String earningType, Double earningValue,
-			boolean isActive) {
-			this.sourceTypeKey = sourceTypeKey;
-			this.sourceTypeName = sourceTypeName;
-			this.earningType = earningType;
-			this.earningValue = earningValue;
-			this.isActive = isActive;
-		}
-	}
-
-	@Getter
-	@Setter
-	@ToString
-	static class MembershipPointRateDto {
-		private Long membershipLevelId;
-		private String membershipLevelName; // 예: "BRONZE", "SILVER"
-		private Double additionalPurchaseRate = 0.0; // 추가 적립률 (%)
-		private boolean isActive = true;
-
-		public MembershipPointRateDto() {
-		}
-
-		public MembershipPointRateDto(Long membershipLevelId, String membershipLevelName, Double additionalPurchaseRate,
-			boolean isActive) {
-			this.membershipLevelId = membershipLevelId;
-			this.membershipLevelName = membershipLevelName;
-			this.additionalPurchaseRate = additionalPurchaseRate;
-			this.isActive = isActive;
-		}
-	}
-
-	@Getter
-	@Setter
-	@ToString
-	static class PointPolicySettingsDto {
-		private List<PointEarningRuleDto> earningRules = new ArrayList<>();
-		private List<MembershipPointRateDto> membershipRates = new ArrayList<>();
-	}
+	private final PointService pointService;
 
 	@GetMapping
 	public String showPointPolicySettings(Model model, HttpServletRequest request) {
@@ -86,23 +40,15 @@ public class AdminPointPolicyController {
 		model.addAttribute("pageTitle", "포인트 정책 설정");
 		model.addAttribute("currentURI", request.getRequestURI());
 
-		// TODO: adminPointPolicyService.getPointPolicySettings() 호출
-		// 임시 데이터
-		PointPolicySettingsDto settingsDto = new PointPolicySettingsDto();
-		settingsDto.getEarningRules().addAll(Arrays.asList(
-			new PointEarningRuleDto("SIGN_UP", "회원가입 시", "AMOUNT", 1000.0, true),
-			new PointEarningRuleDto("REVIEW_WRITE", "리뷰 작성 시", "AMOUNT", 500.0, true),
-			new PointEarningRuleDto("BOOK_PURCHASE", "도서 구매 시", "PERCENTAGE", 1.0, true) // 구매 금액의 1%
-		));
-		settingsDto.getMembershipRates().addAll(Arrays.asList(
-			new MembershipPointRateDto(1L, "BRONZE", 0.0, false), // 브론즈는 추가 적립 없음 (예시)
-			new MembershipPointRateDto(2L, "SILVER", 0.5, true),  // 실버는 구매 시 0.5% 추가 적립
-			new MembershipPointRateDto(3L, "GOLD", 1.0, true)     // 골드는 구매 시 1% 추가 적립
-		));
-		model.addAttribute("pointSettings", settingsDto);
+		// 실제 서비스에서 포인트 규정 목록 조회
+		List<PointRuleResponse> earningRules = pointService.getAllRules();
+		model.addAttribute("earningRules", earningRules);
 
-		// 폼 내 선택 옵션 (필요시)
-		model.addAttribute("earningTypeOptions", Arrays.asList(
+		// TODO: membershipRates 설정
+		model.addAttribute("membershipRates", new ArrayList<>());
+
+		// 폼 내 선택 옵션
+		model.addAttribute("earningTypeOptions", List.of(
 			new AdminCouponController.SelectOption("AMOUNT", "정액(P)"),
 			new AdminCouponController.SelectOption("PERCENTAGE", "정률(%)")
 		));
@@ -110,32 +56,69 @@ public class AdminPointPolicyController {
 		return "admin/point/point_settings_form";
 	}
 
-	@PostMapping
-	public String savePointPolicySettings(//@Valid
-		@ModelAttribute("pointSettings") PointPolicySettingsDto settingsDto,
-		// BindingResult bindingResult, // 유효성 검사 시
-		RedirectAttributes redirectAttributes,
-		HttpServletRequest request) {
-		log.info("포인트 정책 저장 요청: {}", settingsDto);
-
-		// TODO: 유효성 검사 (예: 적립률/적립액이 음수가 아닌지 등)
-		// if (bindingResult.hasErrors()) {
-		//     log.warn("포인트 정책 저장 폼 유효성 검증 에러: {}", bindingResult.getAllErrors());
-		//     redirectAttributes.addFlashAttribute("org.springframework.validation.BindingResult.pointSettings", bindingResult);
-		//     redirectAttributes.addFlashAttribute("pointSettings", settingsDto); // 입력값 유지
-		//     redirectAttributes.addFlashAttribute("globalErrorMessage", "입력값을 확인해주세요.");
-		//     return "redirect:/admin/points/settings"; // 폼으로 다시 리다이렉트
-		// }
-
+	@PostMapping("/{policyId}")
+	public String updateSinglePolicy(
+		@PathVariable Long policyId,
+		PointPolicyUpdateRequest req,
+		RedirectAttributes ra
+	) {
 		try {
-			// TODO: 실제 서비스 로직 호출 (adminPointPolicyService.savePointPolicySettings(settingsDto))
-			log.info("포인트 정책 저장 성공 (임시)");
-			redirectAttributes.addFlashAttribute("globalSuccessMessage", "포인트 정책이 성공적으로 저장되었습니다.");
+			// URL 에서 넘어온 policyId 확인(보안검증 생략)
+			req = new PointPolicyUpdateRequest(
+				policyId,
+				req.policyType(),
+				req.value(),
+				req.isActive()
+			);
+			pointService.updatePolicy(req);
+			ra.addFlashAttribute("globalSuccessMessage",
+				"Policy " + policyId + "가 수정되었습니다.");
 		} catch (Exception e) {
-			log.error("포인트 정책 저장 중 오류 발생", e);
-			redirectAttributes.addFlashAttribute("globalErrorMessage", "포인트 정책 저장 중 오류가 발생했습니다: " + e.getMessage());
-			redirectAttributes.addFlashAttribute("pointSettings", settingsDto); // 오류 시에도 입력값 유지
+			ra.addFlashAttribute("globalErrorMessage",
+				"Policy " + policyId + " 수정 실패: " + e.getMessage());
 		}
-		return "redirect:/admin/points/settings"; // 현재 페이지로 다시 리다이렉트하여 변경된 내용 확인
+		return "redirect:/admin/points/settings";
 	}
+
+	@PostMapping("/new")
+	public String createNewPointPolicy(
+		@ModelAttribute PointPolicyWithSourceCreateRequest req,
+		RedirectAttributes redirectAttributes
+	) {
+		try {
+			Long newSourceTypeId = pointService.createSourceType(
+				new PointSourceTypeCreateRequest(req.actionType(), req.sourceType())
+			);
+
+			PointPolicyCreateRequest policyReq =
+				new PointPolicyCreateRequest(newSourceTypeId, req.policyType(), req.value());
+			Long newPolicyId = pointService.createPolicy(policyReq);
+
+			redirectAttributes.addFlashAttribute("globalSuccessMessage",
+				"생성 완료: PolicyID=" + newPolicyId + " / SourceTypeID=" + newSourceTypeId);
+		} catch (Exception e) {
+			redirectAttributes.addFlashAttribute("globalErrorMessage", "생성 실패: " + e.getMessage());
+		}
+		return "redirect:/admin/points/settings";
+	}
+
+	@GetMapping("/new")
+	public String showNewPolicyForm(Model model) {
+		// 1) 폼 바인딩용 DTO (actionType, sourceType, policyType, value)
+		model.addAttribute("policyCreateRequest",
+			new PointPolicyWithSourceCreateRequest(null, null, null, null));
+		// 2) 정책 유형 드롭다운 옵션
+		model.addAttribute("policyTypes", PolicyType.values());
+		return "admin/point/policy_form";
+	}
+
+	// --- 뷰 모델 DTO ---
+	@Getter
+	@Setter
+	@ToString
+	static class PointPolicySettingsDto {
+		private List<PointRuleResponse> earningRules = new ArrayList<>();
+		private List<Object> membershipRates = new ArrayList<>();
+	}
+
 }
